--- a/index.html
+++ b/index.html
@@ -5,64 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>생명샘교회 전교인 180일 성경 통독표</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="data.js"></script>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f9f9f9;
-      color: #222;
-      margin: 0;
-      padding: 1rem;
-    }
-    .container {
-      max-width: 960px;
-      margin: auto;
-      background: white;
-      padding: 2rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-    h1, h2 {
-      color: #2c3e50;
-    }
-    input[type="text"] {
-      padding: 0.5rem;
-      margin-right: 1rem;
-      font-size: 1rem;
-    }
-    button {
-      padding: 0.5rem 1rem;
-      background: #2d89ef;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #1b66c9;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
-      font-size: 0.95rem;
-    }
-    th, td {
-      padding: 0.6rem;
-      text-align: center;
-      border: 1px solid #ccc;
-    }
-    th {
-      background-color: #eef2f7;
-      font-weight: bold;
-    }
-    .hidden {
-      display: none;
-    }
-    #progressChart {
-      margin-top: 2rem;
-    }
-  </style>
+  <script src="data.js" defer></script>
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
@@ -92,6 +37,5 @@
       </table>
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
