--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>생명샘교회 전교인 180일 성경 통독표</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="data.js" defer></script>
-  <script src="script.js" defer></script>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -37,5 +35,7 @@
       </table>
     </div>
   </div>
+<script src="data.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
