--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>생명샘교회 전교인 180일 성경 통독표</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f6fb; margin:0; padding:1rem; }
+    .container { max-width:800px; margin:auto; background:#fff; padding:2rem; border-radius:10px; }
+    h1 { text-align:center; }
+    .stats { display:flex; justify-content:space-around; margin:1rem 0; }
+    .box { background:#6a11cb; color:#fff; padding:1rem; border-radius:10px; text-align:center; width:30%; }
+    #progressChart { margin:1rem auto; max-width:400px; }
+    table { width:100%; border-collapse:collapse; margin-top:1rem; }
+    th,td { border:1px solid #ccc; padding:0.5rem; text-align:center; }
+    th { background:#eef2f7; }
+    .hidden { display:none; }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>📖 생명샘교회 전교인 180일 성경 통독표</h1>
-    <div class="user-input">
-      <label for="username">이름을 입력하세요:</label>
-      <input type="text" id="username" placeholder="예: 홍길동" />
-      <button id="startButton">시작하기</button>
+    <div>
+      <input type="text" id="username" placeholder="이름을 입력하세요">
+      <button onclick="startReading()">시작하기</button>
     </div>
-    <div id="progress-section" class="hidden">
-      <h2 id="welcome"></h2>
-      <div id="summary"></div>
-      <canvas id="progressChart" width="400" height="200"></canvas>
-      <table id="bible-table">
-        <thead>
-          <tr>
-            <th>회차</th>
-            <th>시작</th>
-            <th>종료</th>
-            <th>시편</th>
-            <th>잠언</th>
-            <th>읽음</th>
-            <th>날짜</th>
-          </tr>
-        </thead>
-        <tbody id="bible-body"></tbody>
-      </table>
+    <div class="stats hidden" id="stats">
+      <div class="box"><h2 id="doneCount">0</h2><div>완료</div></div>
+      <div class="box"><h2 id="percent">0%</h2><div>진행률</div></div>
+      <div class="box"><h2 id="leftCount">180</h2><div>남은</div></div>
     </div>
+    <canvas id="progressChart" class="hidden"></canvas>
+    <table id="bibleTable" class="hidden">
+      <thead><tr><th>회차</th><th>시작</th><th>종료</th><th>시편</th><th>잠언</th><th>읽음</th><th>날짜</th></tr></thead>
+      <tbody></tbody>
+    </table>
   </div>
-<script src="data.js"></script>
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
