--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     th,td { border:1px solid #ccc; padding:0.5rem; text-align:center; }
     th { background:#eef2f7; }
     .hidden { display:none; }
+      table th,
+  table td {
+    white-space: nowrap;
+  }
   </style>
 </head>
 <body>
