--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
     }
+.stat-box.done {
+  background: linear-gradient(to right, #4caf50, #81c784);
+}
+.stat-box.progress {
+  background: linear-gradient(to right, #2196f3, #64b5f6);
+}
+.stat-box.remaining {
+  background: linear-gradient(to right, #ff9800, #ffb74d);
+}
+
     .chart-placeholder, #chartCanvas {
       width: 100%;
       height: 300px;
