--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     th { background:#eef2f7; }
     .hidden { display:none; }
   </style>
+    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script defer src="data.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <div class="container">
