--- a/index.html
+++ b/index.html
@@ -1,54 +1,101 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>생명샘교회 전교인 180일 성경 통독표</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;700&display=swap" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="data.js"></script>
-  <script src="script.js"></script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Google Font: Noto Serif KR -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family:'Noto Serif KR', serif; background:#f4f6fb; margin:0; padding:1rem; }
-    .container { max-width:800px; margin:auto; background:#fff; padding:2rem; border-radius:10px; }
-    h1 { text-align:center; }
-    .stats { display:flex; justify-content:space-around; margin:1rem 0; }
-    .stat-box { color:white; padding:1rem; border-radius:10px; text-align:center; flex:1; margin:0 0.5rem; }
-    .stat-box.done { background:linear-gradient(to right,#4caf50,#81c784); }
-    .stat-box.progress { background:linear-gradient(to right,#2196f3,#64b5f6); }
-    .stat-box.remaining { background:linear-gradient(to right,#ff9800,#ffb74d); }
-    .stat-box h2 { margin:0; font-size:2rem; }
-    #progressChart { margin:1rem auto; max-width:400px; display:block; }
-    table { width:100%; border-collapse:collapse; margin-top:1rem; }
-    th,td { border:1px solid #ccc; padding:0.5rem; text-align:center; white-space:nowrap; }
-    th { background:#eef2f7; }
-    .hidden { display:none; }
+    body {
+      background: #f1f5fb;
+      font-family: 'Noto Serif KR', serif;
+    }
+    .stats {
+      display: flex;
+      justify-content: space-around;
+      margin: 1rem 0;
+    }
+    .stat-box {
+      flex: 1;
+      color: white;
+      padding: 1rem;
+      border-radius: 10px;
+      text-align: center;
+      margin: 0 0.5rem;
+    }
+    .stat-box.done {
+      background: linear-gradient(to right, #4caf50, #81c784);
+    }
+    .stat-box.inprogress {
+      background: linear-gradient(to right, #2196f3, #64b5f6);
+    }
+    .stat-box.remaining {
+      background: linear-gradient(to right, #ff9800, #ffb74d);
+    }
+    .stat-box h2 {
+      font-size: 2rem;
+      margin: 0;
+    }
+    #progressChart {
+      display: block;
+      margin: 1rem auto;
+      max-width: 400px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 0.5rem;
+      text-align: center;
+      white-space: nowrap;
+    }
+    th {
+      background: #eef2f7;
+    }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>📖 생명샘교회 전교인 180일 성경 통독표</h1>
-    <div class="d-flex justify-content-center mb-4">
-      <input id="username" type="text" placeholder="이름을 입력하세요" class="form-control w-50 me-2"/>
+  <div class="container mt-5">
+    <h1 class="text-center">📖 생명샘교회 전교인 180일 성경 통독표</h1>
+    <div class="d-flex justify-content-center my-4">
+      <input id="username" type="text" class="form-control w-50 me-2" placeholder="이름을 입력하세요" />
       <button id="startButton" class="btn btn-primary">시작하기</button>
     </div>
     <div id="stats" class="stats hidden">
-      <div class="stat-box done"><h2 id="doneCount">0</h2><div>완료</div></div>
-      <div class="stat-box progress"><h2 id="percent">0%</h2><div>진행률</div></div>
-      <div class="stat-box remaining"><h2 id="leftCount">180</h2><div>남은</div></div>
+      <div class="stat-box done">
+        <h2 id="doneCount">0</h2>
+        <div>완료</div>
+      </div>
+      <div class="stat-box inprogress">
+        <h2 id="percent">0%</h2>
+        <div>진행률</div>
+      </div>
+      <div class="stat-box remaining">
+        <h2 id="leftCount">180</h2>
+        <div>남은</div>
+      </div>
     </div>
-    <div id="chartContainer" class="progress-container hidden">
-      <canvas id="chartCanvas"></canvas>
-    </div>
-    <div id="tableContainer" class="container hidden">
-      <table id="bibleTable">
-        <thead><tr><th>회차</th><th>시작</th><th>종료</th><th>시편</th><th>잠언</th><th>읽음</th><th>날짜</th></tr></thead>
-        <tbody id="bibleBody"></tbody>
-      </table>
-    </div>
+    <canvas id="progressChart" class="hidden"></canvas>
+    <table id="bibleTable" class="table table-bordered hidden">
+      <thead>
+        <tr>
+          <th>회차</th><th>시작</th><th>종료</th><th>시편</th><th>잠언</th><th>읽음</th><th>날짜</th>
+        </tr>
+      </thead>
+      <tbody id="bibleBody"></tbody>
+    </table>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="data.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
