--- a/index.html
+++ b/index.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>생명샘교회 전교인 180일 성경 통독표</title>
+  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>180일 성경 통독표</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;700&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- Google Font: Noto Serif KR -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Noto Serif KR', serif; background: #f4f6fb; margin:0; padding:1rem; }
-    .container { max-width:800px; margin:auto; background:#fff; padding:2rem; border-radius:10px; }
-    h1 { text-align:center; }
-    .stats { display:flex; justify-content:space-around; margin:1rem 0; }
-    .stat-box { color:white; padding:1rem; border-radius:10px; text-align:center; flex:1; margin:0 0.5rem; }
-    .stat-box.done { background: linear-gradient(to right, #4caf50, #81c784); }
-    .stat-box.progress { background: linear-gradient(to right, #2196f3, #64b5f6); }
-    .stat-box.remaining { background: linear-gradient(to right, #ff9800, #ffb74d); }
-    .stat-box h2 { margin:0; font-size:2rem; }
-    #progressChart { margin:1rem auto; max-width:400px; }
-    table { width:100%; border-collapse:collapse; margin-top:1rem; }
-    th, td { border:1px solid #ccc; padding:0.5rem; text-align:center; white-space:nowrap; }
-    th { background:#eef2f7; }
-    .hidden { display:none; }
+    body {{font-family:'Noto Serif KR',serif;background:#f4f6fb;margin:0;padding:1rem;}}
+    .container {{max-width:900px;margin:auto;background:#fff;padding:2rem;border-radius:10px;}}
+    h1 {{text-align:center;}}
+    .input-group {{display:flex;gap:0.5rem;margin-bottom:1rem;}}
+    .stats {{display:flex;justify-content:space-around;gap:1rem;}}
+    .stat-box {{flex:1;color:#fff;padding:1rem;border-radius:8px;text-align:center;}}
+    .done {{background:#A8E6CF;}} .inprogress {{background:#FFEB3B;}} .remaining {{background:#F8BBD0;}}
+    .stat-box h2 {{margin:0;font-size:2rem;}}
+    table {{width:100%;border-collapse:collapse;margin-top:1rem;}}
+    th,td {{border:1px solid #ccc;padding:0.5rem;text-align:center;white-space:nowrap;}}
+    th {{background:#eef2f7;}} .hidden {{display:none;}}
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>📖 생명샘교회 전교인 180일 성경 통독표</h1>
-    <div style="text-align:center; margin-bottom:1rem;">
-      <input type="text" id="username" placeholder="이름을 입력하세요" />
-      <button onclick="startReading()">시작하기</button>
+    <h1>📖 180일 성경 통독표</h1>
+    <div class="input-group">
+      <input id="nameInput" type="text" class="form-control" placeholder="이름 입력"/>
+      <button id="startButton" class="btn btn-primary">시작하기</button>
     </div>
-    <div class="stats hidden" id="stats">
-      <div class="stat-box done"><h2 id="doneCount">0</h2><div>완료</div></div>
-      <div class="stat-box progress"><h2 id="percent">0%</h2><div>진행률</div></div>
-      <div class="stat-box remaining"><h2 id="leftCount">180</h2><div>남은</div></div>
+    <div id="progressSection" class="hidden">
+      <div class="stats">
+        <div class="stat-box done"><h2 id="doneCount">0</h2><div>완료</div></div>
+        <div class="stat-box inprogress"><h2 id="donePercent">0%</h2><div>진행률</div></div>
+        <div class="stat-box remaining"><h2 id="remainingCount">180</h2><div>남은</div></div>
+      </div>
+      <canvas id="progressChart" class="mt-4" width="300" height="300"></canvas>
+      <table id="bibleTable" class="table table-bordered mt-4"><thead><tr><th>회차</th><th>시작</th><th>종료</th><th>시편</th><th>잠언</th><th>읽음</th><th>날짜</th></tr></thead><tbody></tbody></table>
     </div>
-    <canvas id="progressChart" class="hidden"></canvas>
-    <table id="bibleTable" class="hidden">
-      <thead><tr><th>회차</th><th>시작</th><th>종료</th><th>시편</th><th>잠언</th><th>읽음</th><th>날짜</th></tr></thead>
-      <tbody></tbody>
-    </table>
   </div>
-  <script src="data.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
